--- a/proj-ar/index-ar.html
+++ b/proj-ar/index-ar.html
@@ -1,29 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>WebAR Project</title>
-	<!-- Carregar a biblioteca A-Frame -->
-	<script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-	<!-- Carregar AR.js para A-Frame -->
-	<script src="https://rawcdn.githack.com/jeromeetienne/ar.js/1.7.7/aframe/build/aframe-ar.js"></script>
-	<style>
-		body, html {
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-		}
-	</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Museu Brasileiro - AR (Debug)</title>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+        .arjs-loader {
+            position: fixed;
+            z-index: 999;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .arjs-loader div {
+            color: white;
+            font-size: 1.25em;
+        }
+    </style>
 </head>
 <body>
-	<!-- AR.js setup -->
-	<a-scene embedded arjs>
-		<a-marker preset="hiro">
-			<a-box position="0 0.5 0" material="color: yellow;" depth="1" height="1" width="1"></a-box>
-			<a-sphere position="2 1 0" radius="0.5" color="blue"></a-sphere>
-		</a-marker>
-		<a-entity camera></a-entity>
-	</a-scene>
+    <div class="arjs-loader">
+        <div>Carregando, por favor aguarde...</div>
+    </div>
+
+    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;" vr-mode-ui="enabled: false">
+        <a-assets>
+            <img id="quadro1" src="./assets/Abaporu.jpg">
+            <img id="quadro2" src="./assets/Batalha-do-avai.jpg">
+            <img id="quadro3" src="./assets/Lavrador-de-cafe.jpg">
+            <img id="quadro4" src="./assets/Samba.jpg">
+        </a-assets>
+
+        <a-marker preset="hiro" emitevents="true" id="marker-hiro">
+            <a-box position="0 0.5 0" material="color: red;"></a-box>
+            <a-plane position="0 0.5 0" rotation="-90 0 0" width="1" height="1.5" material="src: #quadro1"></a-plane>
+            <a-plane position="1.5 0.5 0" rotation="-90 0 0" width="1" height="1.5" material="src: #quadro2"></a-plane>
+            <a-plane position="3 0.5 0" rotation="-90 0 0" width="1" height="1.5" material="src: #quadro3"></a-plane>
+            <a-plane position="4.5 0.5 0" rotation="-90 0 0" width="1" height="1.5" material="src: #quadro4"></a-plane>
+        </a-marker>
+
+        <a-entity camera></a-entity>
+    </a-scene>
+
+    <script>
+        const marker = document.querySelector("#marker-hiro");
+        marker.addEventListener('markerFound', () => {
+            console.log('Marcador Hiro detectado');
+            document.querySelector('.arjs-loader').style.display = 'none';
+        });
+    </script>
 </body>
 </html>
