Ajustes dos caminhos das imagens no index-ar

--- a/proj-ar/index-ar.html
+++ b/proj-ar/index-ar.html
@@ -37,37 +37,37 @@
 
     <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;" vr-mode-ui="enabled: false">
         <a-assets>
-            <img id="quadro1" src="./assets/1991-WorldWideWeb.png" alt="World Wide Web">
-            <img id="quadro2" src="./assets/1991-Slac.png" alt="Slac">
-            <img id="quadro3" src="./assets/1992-CloudBusting.png" alt="CloudBusting">
-            <img id="quadro4" src="./assets/1993-VaticanExhibitMainHall.png" alt="Vatican Exhibit Main Hall">
-            <img id="quadro5" src="./assets/1994-IBM.png" alt="IBM">
-            <img id="quadro6" src="./assets/1994-Microsoft.png" alt="Microsoft">
-            <img id="quadro7" src="./assets/1994-Netscape.png" alt="Netscape">
-            <img id="quadro8" src="./assets/1994-Yahoo.png" alt="Yahoo">
-            <img id="quadro9" src="./assets/1995-Amazon.png" alt="Amazon">
-            <img id="quadro10" src="./assets/1995-Apple.png" alt="Apple">
-            <img id="quadro11" src="./assets/1996-Adobe.png" alt="Adobe">
-            <img id="quadro12" src="./assets/1996-MSN.png" alt="MSN">
-            <img id="quadro13" src="./assets/1997-Google.png" alt="Google">
-            <img id="quadro14" src="./assets/1998-Yahoo.png" alt="PlayStation">
-            <img id="quadro15" src="./assets/1998-Valve.png" alt="Valve">
-            <img id="quadro16" src="./assets/1998-Winamp.png" alt="Winamp">
-            <img id="quadro17" src="./assets/1999-HalfLife.png" alt="Half Life">
-            <img id="quadro18" src="./assets/2000-CounterStrike.png" alt="Counter Strike">
-            <img id="quadro19" src="./assets/2001-iTunes.png" alt="iTunes">
-            <img id="quadro20" src="./assets/2002-Netflix.png" alt="Netflix">
-            <img id="quadro21" src="./assets/2003-LinkeDin.png" alt="LinkeDIn">
-            <img id="quadro22" src="./assets/2003-Skype.png" alt="Skype">
-            <img id="quadro23" src="./assets/2004-TheFacebook.png" alt="The Facebook">
-            <img id="quadro24" src="./assets/2005-Youtube.png" alt="Youtube">
-            <img id="quadro25" src="./assets/2006-Spotify.png" alt="Spotify">
-            <img id="quadro26" src="./assets/2006-Twitter.png" alt="Twitter">
-            <img id="quadro27" src="./assets/2007-tumblr.png" alt="Tumblr">
-            <img id="quadro28" src="./assets/2008-AirBNB.png" alt="AirBNB">
-            <img id="quadro29" src="./assets/2009-Minecraft.png" alt="Minecraft">
-            <img id="quadro30" src="./assets/2009-Whatsapp.png" alt="Whatsapp">
-            <img id="quadro31" src="./assets/2010-Fandom.png" alt="Fandom">
+            <img id="quadro1" src="./assets/img-museu/1991-WorldWideWeb.png" alt="World Wide Web">
+            <img id="quadro2" src="./assets/img-museu/1991-Slac.png" alt="Slac">
+            <img id="quadro3" src="./assets/img-museu/1992-CloudBusting.png" alt="CloudBusting">
+            <img id="quadro4" src="./assets/img-museu/1993-VaticanExhibitMainHall.png" alt="Vatican Exhibit Main Hall">
+            <img id="quadro5" src="./assets/img-museu/1994-IBM.png" alt="IBM">
+            <img id="quadro6" src="./assets/img-museu/1994-Microsoft.png" alt="Microsoft">
+            <img id="quadro7" src="./assets/img-museu/1994-Netscape.png" alt="Netscape">
+            <img id="quadro8" src="./assets/img-museu/1994-Yahoo.png" alt="Yahoo">
+            <img id="quadro9" src="./assets/img-museu/1995-Amazon.png" alt="Amazon">
+            <img id="quadro10" src="./assets/img-museu/1995-Apple.png" alt="Apple">
+            <img id="quadro11" src="./assets/img-museu/1996-Adobe.png" alt="Adobe">
+            <img id="quadro12" src="./assets/img-museu/1996-MSN.png" alt="MSN">
+            <img id="quadro13" src="./assets/img-museu/1997-Google.png" alt="Google">
+            <img id="quadro14" src="./assets/img-museu/1998-Yahoo.png" alt="PlayStation">
+            <img id="quadro15" src="./assets/img-museu/1998-Valve.png" alt="Valve">
+            <img id="quadro16" src="./assets/img-museu/1998-Winamp.png" alt="Winamp">
+            <img id="quadro17" src="./assets/img-museu/1999-HalfLife.png" alt="Half Life">
+            <img id="quadro18" src="./assets/img-museu/2000-CounterStrike.png" alt="Counter Strike">
+            <img id="quadro19" src="./assets/img-museu/2001-iTunes.png" alt="iTunes">
+            <img id="quadro20" src="./assets/img-museu/2002-Netflix.png" alt="Netflix">
+            <img id="quadro21" src="./assets/img-museu/2003-LinkeDin.png" alt="LinkeDIn">
+            <img id="quadro22" src="./assets/img-museu/2003-Skype.png" alt="Skype">
+            <img id="quadro23" src="./assets/img-museu/2004-TheFacebook.png" alt="The Facebook">
+            <img id="quadro24" src="./assets/img-museu/2005-Youtube.png" alt="Youtube">
+            <img id="quadro25" src="./assets/img-museu/2006-Spotify.png" alt="Spotify">
+            <img id="quadro26" src="./assets/img-museu/2006-Twitter.png" alt="Twitter">
+            <img id="quadro27" src="./assets/img-museu/2007-tumblr.png" alt="Tumblr">
+            <img id="quadro28" src="./assets/img-museu/2008-AirBNB.png" alt="AirBNB">
+            <img id="quadro29" src="./assets/img-museu/2009-Minecraft.png" alt="Minecraft">
+            <img id="quadro30" src="./assets/img-museu/2009-Whatsapp.png" alt="Whatsapp">
+            <img id="quadro31" src="./assets/img-museu/2010-Fandom.png" alt="Fandom">
 
         </a-assets>
 
