Ajustes na extensão Whatsapp e Fandom para .jpg

--- a/proj-ar/index-ar.html
+++ b/proj-ar/index-ar.html
@@ -66,8 +66,8 @@
             <img id="quadro27" src="./assets/img-museu/2007-tumblr.png" alt="Tumblr">
             <img id="quadro28" src="./assets/img-museu/2008-AirBNB.png" alt="AirBNB">
             <img id="quadro29" src="./assets/img-museu/2009-Minecraft.png" alt="Minecraft">
-            <img id="quadro30" src="./assets/img-museu/2009-Whatsapp.png" alt="Whatsapp">
-            <img id="quadro31" src="./assets/img-museu/2010-Fandom.png" alt="Fandom">
+            <img id="quadro30" src="./assets/img-museu/2009-Whatsapp.jpg" alt="Whatsapp">
+            <img id="quadro31" src="./assets/img-museu/2010-Fandom.jpg" alt="Fandom">
 
         </a-assets>
 
