--- a/proj-ar/index-ar.html
+++ b/proj-ar/index-ar.html
@@ -35,68 +35,63 @@
         <div>Carregando, por favor aguarde...</div>
     </div>
 
-    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;" vr-mode-ui="enabled: false">
+    <a-scene embedded arjs="sourceType: webcam; trackingMethod: best ; debugUIEnabled: false;" vr-mode-ui="enabled: false">
         <a-assets>
-            <!--img id="quadro1" src="./assets/img-museu/1991-WorldWideWeb.png" alt="World Wide Web"-->
-            <!--img id="quadro2" src="./assets/img-museu/1991-Slac.png" alt="Slac"-->
-            <!--img id="quadro3" src="./assets/img-museu/1992-CloudBusting.png" alt="CloudBusting"-->
-            <!--img id="quadro4" src="./assets/img-museu/1993-VaticanExhibitMainHall.png" alt="Vatican Exhibit Main Hall"-->
-            <!--img id="quadro5" src="./assets/img-museu/1994-IBM.png" alt="IBM"-->
-            <img id="quadro1" src="./assets/img-museu/1994-Microsoft.png" alt="Microsoft">
-            <!--img id="quadro7" src="./assets/img-museu/1994-Netscape.png" alt="Netscape"-->
-            <img id="quadro2" src="./assets/img-museu/1994-Yahoo.png" alt="Yahoo">
-            <img id="quadro3" src="./assets/img-museu/1995-Amazon.png" alt="Amazon">
+
+            <img id="quadro1" src="./assets/img-museu/2005-Youtube.png" alt="Youtube">
+            <img id="quadro2" src="./assets/img-museu/2006-Twitter.png" alt="Twitter">
+            <img id="quadro3" src="./assets/img-museu/2008-AirBNB.png" alt="AirBNB">
             <img id="quadro4" src="./assets/img-museu/1995-Apple.png" alt="Apple">
             <img id="quadro5" src="./assets/img-museu/1996-Adobe.png" alt="Adobe">
-            <!--img id="quadro12" src="./assets/img-museu/1996-MSN.png" alt="MSN"-->
-            <img id="quadro13" src="./assets/img-museu/1997-Google.png" alt="Google">
-            <img id="quadro14" src="./assets/img-museu/1998-Yahoo.png" alt="PlayStation">
-            <img id="quadro15" src="./assets/img-museu/1998-Valve.png" alt="Valve">
-            <img id="quadro16" src="./assets/img-museu/1998-Winamp.png" alt="Winamp">
-            <img id="quadro17" src="./assets/img-museu/1999-HalfLife.png" alt="Half Life">
-            <img id="quadro18" src="./assets/img-museu/2000-CounterStrike.png" alt="Counter Strike">
-            <img id="quadro19" src="./assets/img-museu/2001-iTunes.png" alt="iTunes">
-            <img id="quadro20" src="./assets/img-museu/2002-Netflix.png" alt="Netflix">
-            <img id="quadro21" src="./assets/img-museu/2003-LinkeDin.png" alt="LinkeDIn">
-            <img id="quadro22" src="./assets/img-museu/2003-Skype.png" alt="Skype">
-            <img id="quadro23" src="./assets/img-museu/2004-TheFacebook.png" alt="The Facebook">
-            <img id="quadro24" src="./assets/img-museu/2005-Youtube.png" alt="Youtube">
-            <img id="quadro25" src="./assets/img-museu/2006-Spotify.png" alt="Spotify">
-            <img id="quadro26" src="./assets/img-museu/2006-Twitter.png" alt="Twitter">
-            <img id="quadro27" src="./assets/img-museu/2007-tumblr.png" alt="Tumblr">
-            <img id="quadro28" src="./assets/img-museu/2008-AirBNB.png" alt="AirBNB">
-            <img id="quadro29" src="./assets/img-museu/2009-Minecraft.png" alt="Minecraft">
-            <img id="quadro30" src="./assets/img-museu/2009-Whatsapp.jpg" alt="Whatsapp">
-            <img id="quadro31" src="./assets/img-museu/2010-Fandom.jpg" alt="Fandom">
+            <img id="quadro6" src="./assets/img-museu/google.png" alt="Google">
+            <img id="quadro8" src="./assets/img-museu/instagram.png" alt="instagram">
+            <img id="quadro7" src="./assets/img-museu/2004-TheFacebook.png" alt="The Facebook">
+            <img id="quadro9" src="./assets/img-museu/Ibooks.png" alt="Ibooks">
+            <img id="quadro10" src="./assets/img-museu/Uber2011.png" alt="Uber2011">
+            <img id="quadro11" src="./assets/img-museu/Xboox2004.png" alt="Xbox 2004">
+            <img id="quadro13" src="./assets/img-museu/Amazon2010.png" alt="Amazon">
+
 
         </a-assets>
 
         <!-- Quadros na frente -->
         <a-plane position="-1 1 -15" width="1.5"  height="1" material="src: #quadro1"></a-plane>
-        <a-text value="World Wide Web" position="-1 0.5 -3" align="center" width="2"></a-text>
+        <a-text value="Youtube 2005 - Tela Inicial" position="-1 0.25 -15" align="center" width="2" color="black"></a-text>
 
         <a-plane position="1 1 -15" width="1.5" height="1" material="src: #quadro2"></a-plane>
-        <a-text value="Batalha do Avaí - Pedro Américo" position="1 0.5 -3" align="center" width="2"></a-text>
+        <a-text value="Twitter 2006 - Tela Inicial" position="1 0.25 -15" align="center" width="2" color="black"></a-text>
 
         <!-- Quadros do lado direito -->
         <a-plane position="2 1 -5" width="1.5" rotation="0 270 0" height="1" material="src: #quadro3" rotation="0 90 0"></a-plane>
-        <a-text value="Lavrador de Café - Portinari" position="2 0.5 -5" align="center" width="2"></a-text>
+        <a-text value="AirBNB - Tela Inicial" position="2 0.25 -5" align="center" rotation="0 -90 0" width="2" color="black"></a-text>
 
         <a-plane position="2 1 -7" width="1.5" rotation="0 270 0" height="1" material="src: #quadro4" rotation="0 90 0"></a-plane>
-        <a-text value="Samba - Di Cavalcanti" position="2 0.5 -7" align="center" width="2"></a-text>
+        <a-text value="Apple" position="2 0.25 -7" align="center" rotation="0 -90 0"  width="2" color="black"></a-text>
 
         <a-plane position="2 1 -9" width="1.5"rotation="0 270 0" height="1" material="src: #quadro5" rotation="0 90 0"></a-plane>
-        <a-text value="Ciclistas - Iberê Camargo" position="2 0.5 -9" align="center" width="2"></a-text>
+        <a-text value="Adobe" position="2 0.25 -9" align="center"  rotation="0 -90 0" width="2"color="black"></a-text>
+
+        <a-plane position="2 1 -3" width="1.5"rotation="0 270 0" height="1" material="src: #quadro9" rotation="0 90 0"></a-plane>
+        <a-text value="Ibooks 2010 - Tela Inicial" position="2 0.25 -3" align="center"  rotation="0 -90 0" width="2"color="black"></a-text>
+
+        <a-plane position="2 1 -11" width="1.5" rotation="0 270 0" height="1" material="src: #quadro11" rotation="0 90 0"></a-plane>
+        <a-text value="Xbox 2004 - Web" position= "2 0.25 -11" align="center"  rotation="0 -90 0" width="2"color="black"></a-text>
 
         <!-- Quadros do lado esquerdo -->
         <a-plane position="-2 1 -5" width="1.5" rotation="0 90 0" height="1" material="src: #quadro6" rotation="0 -90 0"></a-plane>
-        <a-text value="Microsoft" position="-2 0.5 -5" rotation="0 90 0" align="center" width="2"></a-text>
+        <a-text value="Google" position="-2 0.25 -5" rotation="0 90 0" align="center" width="2" color="black"></a-text>
 
         <a-plane position="-2 1 -7" width="1.5" rotation="0 90 0" height="1" material="src: #quadro7" rotation="0 -90 0"></a-plane>
-        <a-text value="Operários - Tarsila do Amaral" position="-2 0.5 -7" align="center" width="2"></a-text>
+        <a-text value="TheFacebook" position="-2 0.25 -7" rotation="0 90 0" align="center" width="2" color="black"></a-text>
 A
         <a-plane position="-2 1 -9" width="1.5" rotation="0 90 0" height="1" material="src: #quadro8" rotation="0 -90 0"></a-plane>
-        <a-text value="Os Retirantes - Candido Portinari" position="-2 0.5 -9" align="center" width="2"></a-text>
+        <a-text value="Instagram" position="-2 0.25 -9"  rotation="0 90 0" align="center" width="2" color="black"></a-text>
+
+        <a-plane position="-2 1 -3" width="1.5" rotation="0 90 0" height="1" material="src: #quadro10" rotation="0 -90 0"></a-plane>
+        <a-text value="Uber 2011 - Solicitação de corrida" position="-2 0.25 -3"  rotation="0 90 0" align="center" width="2" color="black"></a-text>
+
+        <a-plane position="-2 1 -11" width="1.5" rotation="0 90 0" height="1" material="src: #quadro13" rotation="0 -90 0"></a-plane>
+        <a-text value="Amazon 2010 - Tela Inicial" position="-2 0.25 -11"  rotation="0 90 0" align="center" width="2" color="black"></a-text>
 
         <a-entity camera position="0 1.6 0" look-controls wasd-controls></a-entity>
     </a-scene>
