--- a/proj-ar/index-ar.html
+++ b/proj-ar/index-ar.html
@@ -55,8 +55,9 @@
         </a-assets>
 
         <!-- Quadros na frente -->
-        <a-plane position="-1 1 -15" width="1.5"  height="1" material="src: #quadro1"></a-plane>
-        <a-text value="Youtube 2005 - Tela Inicial" position="-1 0.25 -15" align="center" width="2" color="black"></a-text>
+        <a-marker type="pattern" url="./youtube-ar.patt">
+            <a-image position="0 0 1" rotation="-90 0 0" width="10"  height="10" material="src: #quadro1"></a-image>
+        </a-marker>
 
         <a-plane position="1 1 -15" width="1.5" height="1" material="src: #quadro2"></a-plane>
         <a-text value="Twitter 2006 - Tela Inicial" position="1 0.25 -15" align="center" width="2" color="black"></a-text>
@@ -93,7 +94,7 @@ A
         <a-plane position="-2 1 -11" width="1.5" rotation="0 90 0" height="1" material="src: #quadro13" rotation="0 -90 0"></a-plane>
         <a-text value="Amazon 2010 - Tela Inicial" position="-2 0.25 -11"  rotation="0 90 0" align="center" width="2" color="black"></a-text>
 
-        <a-entity camera position="0 1.6 0" look-controls wasd-controls></a-entity>
+        <a-entity camera position="0 1.6 0"></a-entity>
     </a-scene>
 
     <script>
