Organização das Imagens. Separação por pastas e ajuste no html caminho patt

--- a/proj-ar/index-ar.html
+++ b/proj-ar/index-ar.html
@@ -55,7 +55,7 @@
         </a-assets>
 
         <!-- Quadros na frente -->
-        <a-marker type="pattern" url="./youtube-ar.patt">
+        <a-marker type="pattern" url="./assets/youtube-ar.patt"><!-- coloquei o caminho da pasta aonde está o arquivo patt. O caminho antigo é "./assets/youtube-ar.patt"-->
             <a-image position="0 0 1" rotation="-90 0 0" width="10"  height="10" material="src: #quadro1"></a-image>
         </a-marker>
 
