--- a/proj-ar/index-ar.html
+++ b/proj-ar/index-ar.html
@@ -55,44 +55,54 @@
         </a-assets>
 
         <!-- Quadros na frente -->
-        <a-marker type="pattern" url="./assets/aquivo-patt/youtube-ar.patt"><!-- coloquei o caminho da pasta aonde está o arquivo patt. O caminho antigo é "./assets/youtube-ar.patt"-->
+        <a-marker type="pattern" url="./assets/arquivo-patt/youtube-ar.patt"><!-- coloquei o caminho da pasta aonde está o arquivo patt. O caminho antigo é "./assets/youtube-ar.patt"-->
             <a-image position="0 0 1" rotation="-90 0 0" width="10"  height="10" material="src: #quadro1"></a-image>
         </a-marker>
 
-        <a-plane position="1 1 -15" width="1.5" height="1" material="src: #quadro2"></a-plane>
-        <a-text value="Twitter 2006 - Tela Inicial" position="1 0.25 -15" align="center" width="2" color="black"></a-text>
+        <a-marker type="pattern" url="./assets/arquivo-patt/youtube-ar.patt">
+            <a-image position="0 0 1" rotation="-90 0 0" width="10"  height="10" material="src: #quadro2"></a-image>
+        </a-marker>
 
-        <!-- Quadros do lado direito -->
-        <a-plane position="2 1 -5" width="1.5" rotation="0 270 0" height="1" material="src: #quadro3" rotation="0 90 0"></a-plane>
-        <a-text value="AirBNB - Tela Inicial" position="2 0.25 -5" align="center" rotation="0 -90 0" width="2" color="black"></a-text>
+        <a-marker type="pattern" url="./assets/arquivo-patt/youtube-ar.patt">            
+            <!-- Quadros do lado direito -->
+            <a-image position="0 0 1" rotation="-90 0 0" width="10"  height="10" material="src: #quadro3" ></a-image>
+        </a-marker>
 
-        <a-plane position="2 1 -7" width="1.5" rotation="0 270 0" height="1" material="src: #quadro4" rotation="0 90 0"></a-plane>
-        <a-text value="Apple" position="2 0.25 -7" align="center" rotation="0 -90 0"  width="2" color="black"></a-text>
+        <a-marker type="pattern" url="./assets/arquivo-patt/youtube-ar.patt"></a-marker>
+            <a-image position="0 0 1" rotation="-90 0 0" width="10"  height="10" material="src: #quadro4" ></a-image>
+        </a-marker>
 
-        <a-plane position="2 1 -9" width="1.5"rotation="0 270 0" height="1" material="src: #quadro5" rotation="0 90 0"></a-plane>
-        <a-text value="Adobe" position="2 0.25 -9" align="center"  rotation="0 -90 0" width="2"color="black"></a-text>
+        <a-marker type="pattern" url="./assets/arquivo-patt/youtube-ar.patt">
+            <a-image position="0 0 1" rotation="-90 0 0" width="10"  height="10" material="src: #quadro5" ></a-image>
+        </a-marker>
 
-        <a-plane position="2 1 -3" width="1.5"rotation="0 270 0" height="1" material="src: #quadro9" rotation="0 90 0"></a-plane>
-        <a-text value="Ibooks 2010 - Tela Inicial" position="2 0.25 -3" align="center"  rotation="0 -90 0" width="2"color="black"></a-text>
+        <a-marker type="pattern" url="./assets/arquivo-patt/youtube-ar.patt">
+            <a-imageposition="0 0 1" rotation="-90 0 0" width="10"  height="10" material="src: #quadro9" ></a-image>
+        </a-marker>
 
-        <a-plane position="2 1 -11" width="1.5" rotation="0 270 0" height="1" material="src: #quadro11" rotation="0 90 0"></a-plane>
-        <a-text value="Xbox 2004 - Web" position= "2 0.25 -11" align="center"  rotation="0 -90 0" width="2"color="black"></a-text>
+        <a-marker type="pattern" url="./assets/arquivo-patt/youtube-ar.patt">
+            <a-image pposition="0 0 1" rotation="-90 0 0" width="10"  height="10" material="src: #quadro11" ></a-image>
+        </a-marker>
 
-        <!-- Quadros do lado esquerdo -->
-        <a-plane position="-2 1 -5" width="1.5" rotation="0 90 0" height="1" material="src: #quadro6" rotation="0 -90 0"></a-plane>
-        <a-text value="Google" position="-2 0.25 -5" rotation="0 90 0" align="center" width="2" color="black"></a-text>
+        <a-marker type="pattern" url="./assets/arquivo-patt/youtube-ar.patt"> 
+            <!-- Quadros do lado esquerdo -->
+            <a-image position="0 0 1" rotation="-90 0 0" width="10"  height="10" material="src: #quadro6"></a-image>
+        </a-marker>
+        <a-marker type="pattern" url="./assets/arquivo-patt/youtube-ar.patt">
+            <a-image position="0 0 1" rotation="-90 0 0" width="10"  height="10" material="src: #quadro7"></a-image>
+        </a-marker>
 
-        <a-plane position="-2 1 -7" width="1.5" rotation="0 90 0" height="1" material="src: #quadro7" rotation="0 -90 0"></a-plane>
-        <a-text value="TheFacebook" position="-2 0.25 -7" rotation="0 90 0" align="center" width="2" color="black"></a-text>
-A
-        <a-plane position="-2 1 -9" width="1.5" rotation="0 90 0" height="1" material="src: #quadro8" rotation="0 -90 0"></a-plane>
-        <a-text value="Instagram" position="-2 0.25 -9"  rotation="0 90 0" align="center" width="2" color="black"></a-text>
+        <a-marker type="pattern" url="./assets/arquivo-patt/youtube-ar.patt"></a-marker>
+            <a-image position="0 0 1" rotation="-90 0 0" width="10"  height="10" material="src: #quadro8"></a-image>
+        </a-marker>
 
-        <a-plane position="-2 1 -3" width="1.5" rotation="0 90 0" height="1" material="src: #quadro10" rotation="0 -90 0"></a-plane>
-        <a-text value="Uber 2011 - Solicitação de corrida" position="-2 0.25 -3"  rotation="0 90 0" align="center" width="2" color="black"></a-text>
+        <a-marker type="pattern" url="./assets/arquivo-patt/youtube-ar.patt"></a-marker>
+            <a-image position="0 0 1" rotation="-90 0 0" width="10"  height="10" material="src: #quadro10"></a-image>
+        </a-marker>
 
-        <a-plane position="-2 1 -11" width="1.5" rotation="0 90 0" height="1" material="src: #quadro13" rotation="0 -90 0"></a-plane>
-        <a-text value="Amazon 2010 - Tela Inicial" position="-2 0.25 -11"  rotation="0 90 0" align="center" width="2" color="black"></a-text>
+        <a-marker type="pattern" url="./assets/arquivo-patt/amazon-ar.patt">
+            <a-image position="0 0 1" rotation="-90 0 0" width="10"  height="10" material="src: #quadro13"></a-image>
+        </a-marker>
 
         <a-entity camera position="0 1.6 0"></a-entity>
     </a-scene>
